welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:17: error: ':' expected but ')' found.
def in16(day):Boolean = {
            ^alarmClock:35: error: identifier expected but '}' found.
 }
 ^